--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -18,13 +18,6 @@
 
   <nav class="flex-column flex-grow-1 w-100 ps-0">
     <ul class="nav">
-      <!-- home -->
-      <li class="nav-item{% if page.layout == 'home' %}{{ " active" }}{% endif %}">
-        <a href="{{ '/' | relative_url }}" class="nav-link">
-          <i class="fa-fw fas fa-home"></i>
-          <span>{{ site.data.locales[include.lang].tabs.home | upcase }}</span>
-        </a>
-      </li>
       <!-- the real tabs -->
       {% for tab in site.tabs %}
         <li class="nav-item{% if tab.url == page.url %}{{ " active" }}{% endif %}">
@@ -37,6 +30,13 @@
         </li>
         <!-- .nav-item -->
       {% endfor %}
+      <!-- home -->
+      <li class="nav-item{% if page.layout == 'home' %}{{ " active" }}{% endif %}">
+        <a href="{{ '/posts/' | relative_url }}" class="nav-link">
+          <i class="fa-fw fas fa-pen-nib"></i>
+          <span>{{ site.data.locales[include.lang].tabs.posts | default: site.data.locales[include.lang].tabs.home | upcase }}</span>
+        </a>
+      </li>
     </ul>
   </nav>
 
